Change personal URL in README

--- a/README
+++ b/README
@@ -1,10 +1,9 @@
-Csound csd Python Package
+csd
+Csound csd preprocessor
 By Jacob Joaquin
 
 jacobjoaquin@gmail.com
-http://www.thumbuki.com/
-http://jacobjoaquin.tumblr.com/
-http://twitter.com/JacobJoaquin
+http://www.codehop.com
 
 copyright (c) Jacob Joaquin 2009
 
