--- a/README
+++ b/README
@@ -17,14 +17,12 @@ quickly, easily and efficiently."*
 Quick Installation Instructions
 -------------------------------
 
-After downloading the csd tar file, you can install csd in using the
-following command-lines in a terminal window::
+To install, clone from get and run setup.
 
-    gunzip -c csd-x.x.x.tar | tar xf -
-    cd csd-x.x.x
-    python setup.py install
+	$ git clone git@github.com:jacobjoaquin/csd.git
+	$ cd csd
+	$ python setup.py install
 
-See included manual for more details.
 
 About
 -----
