--- a/README
+++ b/README
@@ -17,9 +17,9 @@ quickly, easily and efficiently."*
 Quick Installation Instructions
 -------------------------------
 
-To install, clone from get and run setup.
+To install, clone from git and run setup.
 
-	$ git clone git@github.com:jacobjoaquin/csd.git
+	$ git clone git://github.com/jacobjoaquin/csd.git
 	$ cd csd
 	$ python setup.py install
 
